[Mac] Fix regression with favicon animating into view when it should not.

https://chromium-review.googlesource.com/769238 adds a method that
updates the favicon location and by default animates the change, but
this causes the favicon to move when you release a tab after dragging
it to a window. This cl adds a parameter specifying whether or not the
favicon position change should animate.

Bug: 786297
Change-Id: If5453ac27c9d0c6943389e22df66efa1a8fcd6b1
Reviewed-on: https://chromium-review.googlesource.com/777463
Commit-Queue: Jayson Adams <shrike@chromium.org>
Reviewed-by: Avi Drissman <avi@chromium.org>
Cr-Commit-Position: refs/heads/master@{#517576}